@@ -19,6 +19,13 @@
 
 #include <koSpellConfig.h>
 #include <kdebug.h>
+#include "koSpellConfig.moc"
+#include "klocale.h"
+#include <kdialog.h>
+#include <kspell.h>
+#include <klineedit.h>
+#include <keditlistbox.h>
+
 
 #include <qcheckbox.h>
 #include <qlabel.h>
@@ -29,17 +36,14 @@
 #include <qpushbutton.h>
 #include <qlistbox.h>
 #include <qpushbutton.h>
-#include <keditlistbox.h>
 #include <qtabwidget.h>
 #include <qgroupbox.h>
-
-#include "koSpellConfig.moc"
-#include "klocale.h"
-#include <kdialog.h>
-#include <kspell.h>
 #include <qgrid.h>
 #include <qgroupbox.h>
 #include <qlayout.h>
+#include <qfile.h>
+#include <qtextstream.h>
+#include <qdir.h>
 
 KoSpellConfigWidget::KoSpellConfigWidget( QWidget *_parent, KSpellConfig *_config, bool backgroundSpellCheck )
     : QWidget( _parent)
@@ -47,7 +51,6 @@ KoSpellConfigWidget::KoSpellConfigWidget( QWidget *_parent, KSpellConfig *_confi
     QTabWidget *tab = new QTabWidget(_parent);
     QGroupBox* tmpQGroupBox = new QGroupBox( tab, "GroupBox" );
     tmpQGroupBox->setTitle(i18n("Spelling"));
-
     QGridLayout *grid1 = new QGridLayout(tmpQGroupBox, 6, 1, KDialog::marginHint(), KDialog::spacingHint());
     grid1->addRowSpacing( 0, KDialog::marginHint() + 5 );
     grid1->setRowStretch( 5, 10 );
@@ -80,9 +83,40 @@ KoSpellConfigWidget::KoSpellConfigWidget( QWidget *_parent, KSpellConfig *_confi
 
     tab->addTab(tmpQGroupBox2, i18n("IgnoreAll"));
 
+
+    QVGroupBox* tmpQGroupBox3 = new QVGroupBox( i18n("Personal dictionary"), tab, "GroupBox3" );
+    m_dictionary =  new KEditListBox( i18n("Word:"),
+                                      tmpQGroupBox3, "dictionary" , false,
+                                      KEditListBox::Add|KEditListBox::Remove );
+
+    m_clearDictionary = new QPushButton( i18n("Clear Dictionary"),tmpQGroupBox3);
+    connect( m_clearDictionary, SIGNAL(clicked()),this, SLOT(slotClearDictionary()));
+
+    tab->addTab(tmpQGroupBox3, i18n("Dictionary"));
+    initDictionaryListWord();
 }
 
 
+void KoSpellConfigWidget::initDictionaryListWord()
+{
+    if ( m_spellConfig->client() == KS_CLIENT_ISPELL )
+    {
+
+        QString directoryName = QDir::homeDirPath() + "/.ispell_"+m_spellConfig->dictionary();
+        kdDebug()<<" directoryName :"<<directoryName<<endl;
+        QFile f( directoryName );
+        if ( f.exists() && f.open(IO_ReadOnly))
+        {
+            QTextStream t( &f );
+            QString result = t.read();
+            f.close();
+            QStringList lst = QStringList::split("\n", result);
+            m_dictionary->insertStringList( lst );
+        }
+    }
+    else
+        m_dictionary->setEnabled( false );
+}
 
 bool KoSpellConfigWidget::backgroundSpellCheck()
 {
@@ -117,6 +151,8 @@ void KoSpellConfigWidget::setDontCheckTitleCase( bool _b )
 void KoSpellConfigWidget::slotClearIgnoreAllHistory()
 {
     m_listignoreall->listBox()->clear();
+    m_listignoreall->lineEdit()->clear();
+
 }
 
 void KoSpellConfigWidget::addIgnoreList( const QStringList & lst)
@@ -145,4 +181,31 @@ void KoSpellConfigWidget::setDefault()
     m_dontCheckTitleCase->setChecked(false);
     m_cbBackgroundSpellCheck->setChecked(false);
     m_listignoreall->listBox()->clear();
+}
+
+void KoSpellConfigWidget::slotClearDictionary()
+{
+    m_dictionary->listBox()->clear();
+    m_dictionary->lineEdit()->clear();
+}
+
+void KoSpellConfigWidget::saveDictionary()
+{
+    QString lst;
+    for (int i = 0; i< (int)m_dictionary->listBox()->count() ; i++)
+        lst+= m_dictionary->listBox()->text( i ) +"\n";
+
+    if ( m_spellConfig->client() == KS_CLIENT_ISPELL )
+    {
+        QString directoryName = QDir::homeDirPath() + "/.ispell_"+m_spellConfig->dictionary();
+        kdDebug()<<" directoryName :"<<directoryName<<endl;
+        QFile f( directoryName );
+        if ( f.open(IO_ReadWrite))
+        {
+            QTextStream t( &f );
+            t <<lst;
+            f.close();
+        }
+    }
+
 }
