@@ -292,3 +292,4 @@ Changes after KWord-1.2
 - Add new font attribute : small caps
 - Now we can edit "ignore all list" 
 - Add support for convert text to textbox
+- Now we can add/remove word in personal dictionary
